frontend/src/scss/layout/_navbar.scss
@import '../utilities/variables';
@import '../utilities/mixins';

.navbar
{
    width: 100%;
    height: 3rem;
    z-index: 10000;
    padding-right: 1rem;
    padding-left: 1rem;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: space-between;
    
    &--lm
    {
        background-color: $color_cyan;
        box-shadow: 0 0.1rem 0.6rem 0.3rem $color_very_light_black;
    }

    &--dm
    {
        background-color: $color_immensily_dark_grey;
        box-shadow: 0 0.1rem 0.6rem 0.3rem $color_black;
    }

    @media only screen and (max-width: 800px) 
    {
        padding-left: 0.5rem;
    }

    &__menu
    {
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 0.5rem;
    }

    &__title
    {
        font-size: 25px;
        font-weight: 600;
        user-select: none;
        
        &--lm
        {
            color: $color_white;
            text-shadow: 0.15rem 0.15rem 0.15rem $color_light_black;
        }

        &--dm
        {
            color: $color_dark_white;
            text-shadow: 0.15rem 0.15rem 0.15rem $color_black;
        }
    }
    
    &__container
    {
        display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: row;
        gap: 1rem;
    }

    &__links
    {
        gap: 0.15rem;
        display: flex;
        justify-content: flex-end;
        list-style-type: none;
    }

    &__side-menu-links
    {
        display: flex;
        flex-direction: column;
        list-style-type: none;
        padding-bottom: 1.25rem;
        width: 100%;
        gap: 0.5rem;

        & li, a
        {
            width: 100%;
            text-decoration: none;
            border-radius: 0.5rem;
        }
    }

    &__option-button
    {
        width: 2rem;
        height: 2rem;
        padding: 0.25rem;
        text-decoration: none;
        border: 0.15rem solid;
        border-radius: 0.5rem;
        transition: 0.2s;
        cursor: pointer;
        
        &--lm
        {
            color: $color_white;
            text-shadow: 0.15rem 0.15rem 0.15rem $color_light_black;
            background-color: $color_light_cyan;

            @include default-borders-light();

            &:hover
            {
                background-color: $color_very_light_cyan;

                & > svg
                {
                    stroke: white;
                }
            }
        }

        &--dm
        {
            color: $color_dark_white;
            text-shadow: 0.15rem 0.15rem 0.15rem $color_black;
            background-color: $color_very_dark_grey;

            @include default-borders-dark();

            &:hover
            {
                background-color: $color_mildly_dark_grey;

                & > svg
                {
                    stroke: $color_dark_white;
                }
            }
        }

        & svg
        {
            padding: 0.05rem;
            filter: drop-shadow(2px 2px 3px black);
        }

        &:hover
        {
            font-weight: bold;

            & > svg
            {
                stroke-width: 0.025rem;
            }
        }
    }

    &__navigation-button
    {
        width: 7.5rem;
        height: 3rem;
        display: flex;
        align-items: center;
        justify-content: center;
        text-align: center;
        font-size: 16px;
        margin-right: 0.15rem;
        transition: 0.3s background-color;
        text-decoration: none;
        
        &--lm
        {
            color: $color_white;
            background-color: $color_light_cyan;
            text-shadow: 0.15rem 0.15rem 0.15rem $color_light_black;

            &:hover 
            {
                background-color: $color_very_light_cyan;
                font-weight: bold;
                font-size: 17px;
            }
        }

        &--dm
        {
            color: $color_dark_white;
            background-color: $color_very_dark_grey;
            text-shadow: 0.15rem 0.15rem 0.15rem $color_immensily_dark_grey;

            &:hover 
            {
                background-color: $color_mildly_dark_grey;
                font-weight: bold;
                font-size: 17px;
            }
        }
    }
}

